--- a/jigsaw/p3/index.html
+++ b/jigsaw/p3/index.html
@@ -15,36 +15,44 @@
   <p>
   <h1>問題1</h1>
   </p>
+  <!-- <p class="double-bottom"></p> -->
+
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020"
+      target="exp">3-1,9×9の答え</a> を出力するプログラムを生成してください。
+  </p>
+
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1kaCtzB3hUDEhchIkzXGyW2WTpQB8zv-FMy_Sj3xJUW0&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BA%8C%E4%B9%97%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A02"
+      target="exp">3-2,二乗の答え</a> を出力するプログラムを生成してください。
+  </p>
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1_zbangU-hMfkxxMUxdznMnZhsTJyDTFLKRys2YNCYIA&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%98%9F%E3%82%92%E5%85%AD%E5%80%8B%E4%B8%A6%E3%81%B9%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+      target="exp">3-3,星を規則的に描く</a> プログラムを生成してください。
+  </p>
   <p class="double-bottom"></p>
-  <p>
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020C"
-      target="exp">3-1.9×9の答え</a> を出力するプログラムを作成してください。
+  <div style="float: left; width: 20%; text-align: center;">
+    <img src="image (1).png" alt="写真" width="60%">
+    <p class="sanae1"> <a href="https://forms.gle/Mg4CRdLWfc3ajd5N8" target="_blank"
+        rel="noopener noreferrer">3-1のdocument id を送信</a>
+    </p>
+    <p class="sanae1"> <a href="https://forms.gle/CdeuGhocoT8u5BXeA" target="_blank"
+        rel="noopener noreferrer">3-2のdocument id を送信</a>
+    </p>
+    <p class="sanae1"> <a href="https://forms.gle/N6kJF1ZKDtfgi8is7" target="_blank"
+      rel="noopener noreferrer">3-3のdocument id を送信</a>
   </p>
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1z_B5V-h0IRNpgO4QpXY6qKidDTFnyMaknoKwsCGKYc4&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BA%8C%E4%B9%97%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
-      target="exp">3-2.２乗の答え</a> を出力するプログラムを生成してください。
-  </p>
+    
+  </div>
+  <div style="float: left; width: 79%; border: solid 1px black;">
+    <iframe
+      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020"
+      name="exp" height="700" width="100%" scrolling="yes">
+    </iframe>
+  </div>
+  <div style="clear: both;"></div>
 
-  <p> <a
-      href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1_zbangU-hMfkxxMUxdznMnZhsTJyDTFLKRys2YNCYIA&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%98%9F%E3%82%92%E5%85%AD%E5%80%8B%E4%B8%A6%E3%81%B9%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
-      target="exp">3-3.星</a> を描くプログラムを出力してください。
-  </p>
-  
-  <iframe
-    src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020C"
-    name="exp" width="1100" height="700" align="right" scrolling="yes" marginheight="50">
-
-  </iframe>
-  <div class="vertical-line"></div>
-
-  <p class="double-bottom"></p>
-  <img src="star2.JPG" alt="写真" width="20%" height="20%">
   <div id="footer">©Sanae　Fujii</div>
-  <p> <a href="https://forms.gle/HnhBT7YxR1rSFcLC6" target="_blank" rel="noopener noreferrer">3-1のdocument id を送信</a>  </p>
-  <p> <a href="https://forms.gle/aZRPbSLX45bGYmgx9" target="_blank" rel="noopener noreferrer">3-2のdocument id を送信</a>  </p>
-  <p> <a href="https://forms.gle/4ApoVP5G9mdF3o9E6" target="_blank" rel="noopener noreferrer">3-3のdocument id を送信</a>  </p>
-
-
 
   </footer>
 
