--- a/jigsaw/11210t/index.html
+++ b/jigsaw/11210t/index.html
@@ -18,21 +18,21 @@
   <!-- <p class="double-bottom"></p> -->
 
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020"
-      target="exp">3-1,9×9の答え</a> を出力するプログラムを生成してください。
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1htcMk54LqYjeqcyKGh0mULALnd4_mMrqgeCTyzN_k1Y&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%80%9C%E4%B9%9D%E4%B9%9D%20%E3%80%9C"
+      target="exp">3-1,九九の答え</a> を出力するプログラムを生成してください。
   </p>
 
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1kaCtzB3hUDEhchIkzXGyW2WTpQB8zv-FMy_Sj3xJUW0&mime_type=application/vnd.google-apps.spreadsheet&title=%E4%BA%8C%E4%B9%97%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A02"
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1kaCtzB3hUDEhchIkzXGyW2WTpQB8zv-FMy_Sj3xJUW0&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%80%9C%E4%BA%8C%E4%B9%97%E3%82%92%E3%81%8B%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%E3%80%9C"
       target="exp">3-2,二乗の答え</a> を出力するプログラムを生成してください。
   </p>
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1_zbangU-hMfkxxMUxdznMnZhsTJyDTFLKRys2YNCYIA&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%98%9F%E3%82%92%E5%85%AD%E5%80%8B%E4%B8%A6%E3%81%B9%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%202020"
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1FyYQZ3JNRUf298HIvam93cMIgukJ5eMoELg_bqL6FTI&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%80%9C%E6%98%9F%E3%82%92%E5%85%AD%E5%80%8B%E4%B8%A6%E3%81%B9%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%20%E3%80%9C"
       target="exp">3-3,星を規則的に描く</a> プログラムを生成してください。
   </p>
   <p class="double-bottom"></p>
   <div style="float: left; width: 20%; text-align: center;">
-    <img src="image (1).png" alt="写真" width="100%">
+    <img src="image_341.JPG" alt="写真" width="100%">
     <p class="sanae1"> <a href="https://forms.gle/Mg4CRdLWfc3ajd5N8" target="_blank"
         rel="noopener noreferrer">3-1のdocument id を送信</a>
     </p>
@@ -46,7 +46,7 @@
   </div>
   <div style="float: left; width: 79%; border: solid 1px black;">
     <iframe
-      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1H3l4r48NixUPXFby17iJ-hRCbPCxgZBGhMlL5nKn9kE&mime_type=application/vnd.google-apps.spreadsheet&title=99%202020"
+      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1htcMk54LqYjeqcyKGh0mULALnd4_mMrqgeCTyzN_k1Y&mime_type=application/vnd.google-apps.spreadsheet&title=%E3%80%9C%E4%B9%9D%E4%B9%9D%20%E3%80%9C"
       name="exp" height="700" width="100%" scrolling="yes">
     </iframe>
   </div>
