--- a/jigsaw/11210t/index.html
+++ b/jigsaw/11210t/index.html
@@ -32,7 +32,7 @@
   </p>
   <p class="double-bottom"></p>
   <div style="float: left; width: 20%; text-align: center;">
-    <img src="image_341.JPG" alt="写真" width="100%">
+    <img src="image3312.jpg" alt="写真" width="100%">
     <p class="sanae1"> <a href="https://forms.gle/Mg4CRdLWfc3ajd5N8" target="_blank"
         rel="noopener noreferrer">3-1のdocument id を送信</a>
     </p>
