--- a/jigsaw/0513w/index.html
+++ b/jigsaw/0513w/index.html
@@ -30,10 +30,10 @@
   <p class="double-bottom"></p>
   <div style="float: left; width: 20%; text-align: center;">
     <img src="donatu.JPG" alt="写真" width="100%">
-    <p class="sanae1"> <a href="https://forms.gle/Mg4CRdLWfc3ajd5N8" target="_blank"
+    <p class="sanae1"> <a href="https://forms.gle/rNufGABwKaS8bSiW7" target="_blank"
         rel="noopener noreferrer">7-1のdocument id を送信</a>
     </p>
-    <p class="sanae1"> <a href="https://forms.gle/CdeuGhocoT8u5BXeA" target="_blank"
+    <p class="sanae1"> <a href="https://forms.gle/mTdoz3r8nLc71Ltf8" target="_blank"
         rel="noopener noreferrer">7-2のdocument id を送信</a>
     </p>
     
