--- a/text-part2/src/1-4.html
+++ b/text-part2/src/1-4.html
@@ -1,11 +1,6 @@
-<html>
-
-<head>
-    <title>HTMLの練習</title>
-</head>
-
-<body>
-    <p>最小限の構成を作ってみます</p>
-</body>
-
-</html>
+<p>クラウドといえば</p>
+<ul>
+	<li>IaaS</li>
+	<li>PaaS</li>
+	<li>SaaS</li>
+</ul>
