--- a/text-part2/src/1-3.html
+++ b/text-part2/src/1-3.html
@@ -1,11 +1,2 @@
-<html>
-
-<head>
-    <title>HTMLの練習</title>
-</head>
-
-<body>
-    <p>最小限の構成を作ってみます</p>
-</body>
-
-</html>
+<p>Googleは<a href="http://google.com">こちら</a>から</p>
+<p>別に作ったページは<a href="next.html">ここ</a>から</p>
