--- a/text-part2/src/1-5.html
+++ b/text-part2/src/1-5.html
@@ -1,11 +1,6 @@
-<html>
-
-<head>
-    <title>HTMLの練習</title>
-</head>
-
-<body>
-    <p>最小限の構成を作ってみます</p>
-</body>
-
-</html>
+<p>信号の色の順</p>
+<ol>
+	<li>青</li>
+	<li>黄</li>
+	<li>赤</li>
+</ol>
