--- a/jigsaw/0513w/index.html
+++ b/jigsaw/0513w/index.html
@@ -26,17 +26,23 @@
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1AS2gXcaiyzexL-1Plem9GvhOSbu8jP5gaZkPSJsPRQ4&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%96%8F%E5%B9%B4%E5%88%A4%E5%AE%9A"
       target="exp">7-2,閏年</a> を出力するプログラムを生成してください。
   </p>
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1KTsUPyofVDpNLPngfj1FWI6iaKHxgBQANSaRSHvxxMY&mime_type=application/vnd.google-apps.spreadsheet&title=%E6%89%8B%E8%A3%8F%E5%89%A3%E3%82%92%E6%8F%8F%E3%81%8F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+      target="exp">7-3,手裏剣</a> を出力するプログラムを生成してください。
+  </p>
 
   <p class="double-bottom"></p>
   <div style="float: left; width: 20%; text-align: center;">
-    <img src="donatu.JPG" alt="写真" width="100%">
+    <img src="S8069122.jpg" alt="写真" width="100%">
     <p class="sanae1"> <a href="https://forms.gle/rNufGABwKaS8bSiW7" target="_blank"
         rel="noopener noreferrer">7-1のdocument id を送信</a>
     </p>
     <p class="sanae1"> <a href="https://forms.gle/mTdoz3r8nLc71Ltf8" target="_blank"
         rel="noopener noreferrer">7-2のdocument id を送信</a>
     </p>
-    
+    <p class="sanae1"> <a href="https://forms.gle/2SnaDcMMDnbzHwp56" target="_blank"
+      rel="noopener noreferrer">7-3のdocument id を送信</a>
+  </p>
     
   </div>
   <div style="float: left; width: 79%; border: solid 1px black;">
