--- a/jigsaw/0319m/index.html
+++ b/jigsaw/0319m/index.html
@@ -18,13 +18,13 @@
   <!-- <p class="double-bottom"></p> -->
 
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1QFcAxfUngaGSzzj6xQd8WCc9RUfaskOWZMx3BuBx6OI&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E5%87%BA%E5%8A%9B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1I2vPkKEPTU0lmevevwkUCv3WxFQvJdpSo42LLqYzB6c&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%82%92%E5%87%BA%E5%8A%9B%E3%81%99%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
       target="exp">8-1,階乗</a> を出力するプログラムを生成してください。
   </p>
 
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1-iEW_gBf0fJpvOOHKa5kikwYoqY65HbuwTVgHVuYxC0&mime_type=application/vnd.google-apps.spreadsheet&title=go%20to%E3%80%80%E3%82%AD%E3%83%A3%E3%83%B3%E3%83%9A%E3%83%BC%E3%83%B3"
-      target="exp">8-2,Gotoキャンペーン</a> を出力するプログラムを生成してください。
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1TMv7T28aaOoLaOAwshdbruB5sYldvgZdCs11pcuA4qs&mime_type=application/vnd.google-apps.spreadsheet&title=Goto%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+      target="exp">8-2,Goto travelの割引プログラム</a> を出力するプログラムを生成してください。
   </p>
 
   <p class="double-bottom"></p>
