--- a/jigsaw/0319m/index.html
+++ b/jigsaw/0319m/index.html
@@ -24,7 +24,7 @@
 
   <p class="sanae1">
     <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1TMv7T28aaOoLaOAwshdbruB5sYldvgZdCs11pcuA4qs&mime_type=application/vnd.google-apps.spreadsheet&title=Goto%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
-      target="exp">8-2,Goto travelの割引プログラム</a> を出力するプログラムを生成してください。
+      target="exp">8-2,Goto travelの割引</a> を出力するプログラムを生成してください。
   </p>
 
   <p class="double-bottom"></p>
