--- a/text-part2/src/2-2.html
+++ b/text-part2/src/2-2.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CSSの練習</title>
-	<link rel="stylesheet" href="mystyle.css">
+	<link rel="stylesheet" href="first.css">
 </head>
 
 <body>
