--- a/text-part2/src/2-3.html
+++ b/text-part2/src/2-3.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="ja">
+<html>
 
 <head>
-	<meta charset="UTF-8">
 	<title>CSSの練習</title>
 	<link rel="stylesheet" href="divspan.css">
 </head>
