--- a/jigsaw/0319m/index.html
+++ b/jigsaw/0319m/index.html
@@ -17,31 +17,40 @@
   </p>
   <!-- <p class="double-bottom"></p> -->
 
-  <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1I2vPkKEPTU0lmevevwkUCv3WxFQvJdpSo42LLqYzB6c&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%82%92%E5%87%BA%E5%8A%9B%E3%81%99%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
-      target="exp">8-1,階乗</a> を出力するプログラムを生成してください。
-  </p>
+ 
 
   <p class="sanae1">
-    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1TMv7T28aaOoLaOAwshdbruB5sYldvgZdCs11pcuA4qs&mime_type=application/vnd.google-apps.spreadsheet&title=Goto%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
-      target="exp">8-2,Goto travelを使った旅行代金</a> を出力するプログラムを生成してください。
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1ruuTC07VYkRwhiHtWIbl4w9cQu2wqd4omPN97QC_cRI&mime_type=application/vnd.google-apps.spreadsheet&title=Go%20to%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%20part1"
+      target="exp">8-1,Goto travelを使った旅行代金1</a> を出力するプログラムを生成してください。
+  </p>
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1TMv7T28aaOoLaOAwshdbruB5sYldvgZdCs11pcuA4qs&mime_type=application/vnd.google-apps.spreadsheet&title=Goto%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%20part2"
+      target="exp">8-2,Goto travelを使った旅行代金2</a> を出力するプログラムを生成してください。
+  </p>
+  <p class="sanae1">
+    <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1I2vPkKEPTU0lmevevwkUCv3WxFQvJdpSo42LLqYzB6c&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%82%92%E5%87%BA%E5%8A%9B%E3%81%99%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+      target="exp">8-3,階乗</a> を出力するプログラムを生成してください。
   </p>
 
   <p class="double-bottom"></p>
   <div style="float: left; width: 20%; text-align: center;">
-    <img src="kaizyou.JPG" alt="写真" width="100%">
+    <img src="kazyou2.jpg" alt="写真" width="100%">
     <p class="sanae1"> <a href="https://forms.gle/sbudA3cnHM6tUHT17" target="_blank"
         rel="noopener noreferrer">8-1のdocument id を送信</a>
     </p>
     <p class="sanae1"> <a href="https://forms.gle/oRGHuFsNeqQ4GEG57" target="_blank"
         rel="noopener noreferrer">8-2のdocument id を送信</a>
     </p>
+    <p class="sanae1"> <a href="https://forms.gle/w4KWcKLctFqrMaxF8" target="_blank"
+      rel="noopener noreferrer">8-3のdocument id を送信</a>
+  </p>
+  
     
     
   </div>
   <div style="float: left; width: 79%; border: solid 1px black;">
     <iframe
-      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1I2vPkKEPTU0lmevevwkUCv3WxFQvJdpSo42LLqYzB6c&mime_type=application/vnd.google-apps.spreadsheet&title=%E9%9A%8E%E4%B9%97%E3%82%92%E5%87%BA%E5%8A%9B%E3%81%99%E3%82%8B%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0"
+      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1ruuTC07VYkRwhiHtWIbl4w9cQu2wqd4omPN97QC_cRI&mime_type=application/vnd.google-apps.spreadsheet&title=Go%20to%20travel%E3%81%AE%E5%89%B2%E5%BC%95%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%A0%20part1"
       name="exp" height="700" width="100%" scrolling="yes">
     </iframe>
   </div>
