ミーティングはロックしないようにする

--- a/exam/webexam.html
+++ b/exam/webexam.html
@@ -41,8 +41,8 @@
         <li>パーソナルミーティングを開始する</li>
         パーソナル会議室で「ミーティングを開始する」ボタンを押せばOKです．
         <a href="https://telecon.aim.aoyama.ac.jp/Available-systems/ME_WebexMeetings/ME_personal-meeting">詳細説明</a>
-        <li>（Optional）ミーティングをロックする．</li>
-        ミーティングをロックするというスイッチをONにしておくと他人が入ってこられないのでトラブルが少なくなります．
+        <!-- <li>（Optional）ミーティングをロックする．</li> -->
+        <!-- ミーティングをロックするというスイッチをONにしておくと他人が入ってこられないのでトラブルが少なくなります． -->
         <li>ミュート解除，ビデオオンにする．</li>
         <li>録画を開始する</li>
         録画ボタンを押し，「クラウドで録画」になっていることを確認して録画を開始します．
