中間試験要項を改正

--- a/exam/midexam.html
+++ b/exam/midexam.html
@@ -11,14 +11,20 @@
     <ul>
         <li>第10回（11月27日） 1限</li>
         <li>開始時刻は9時15分，<a href="webexam.html">動画記録型試験方式</a>にて80分間試験を行う．</li>
-        <li>10時45分以降の作業が確認された場合には不正行為とみなす</li>
+        <li>10時45分以降の作業が確認された場合には不正行為とみなす．</li>
     </ul>
 
     <h3>試験方式</h3>
     <ul>
         <li><a href="webexam.html">動画記録型試験方式</a></li>
         <li>場所は各自のスペース</li>
-        <li>動画記録型試験方式が受験できない場合には「リアルタイム動画共有口頭試問併用試験」となります．</li>
+        <li>動画記録型試験方式が受験できない場合には「リアルタイム画面共有口頭試問併用試験」となります．
+            事前にお申し出ください．</li>
+    </ul>
+    <h2>リアルタイム画面共有口頭試問併用試験</h2>
+    <ul>
+        <li>CreCo SpeekまたはZoomで画面共有をしながら問題を問いていただきます．</li>
+        <li>専任のTAが監督し，適宜割り込んで口頭試問を行うことで，不正がないことをチェックします．</li>
     </ul>
 
     <h3>試験範囲</h3>
@@ -35,7 +41,7 @@
     </ul>
     <h3>試験中に利用できるもの</h3>
     <ul>
-        <li>Sumatra</li>
+        <li>Sumatra(中間試験用サイト)．いままで使っているSumatraも同時に開いて参照して良い．</li>
         <li>問題のページ（PDFファイル）参照</li>
     </ul>
     <h3>試験中に利用できないもの</h3>
@@ -50,12 +56,5 @@
         <li>体育会の試合などにより欠席の場合には，追試を行う．前の週までに申し出ること</li>
         <li>病欠の場合は，状況に応じて追試の判断を行う．できるだけ早く（できれば試験前に）担当者にメールなどで連絡すること．後日，医師の診断書を提出すること．</li>
     </ul>
-
-    <h3>その他</h3>
-    <ul>
-        <li>2限には講義があるので，帰らないこと</li>
-        <li>持ち込み可能と言っても，授業で行ったこと・問題がそのまま出るわけでは無いのできちんと勉強すること．</li>
-    </ul>
-
 
 </body>
