--- a/jigsaw/0726s/index.html
+++ b/jigsaw/0726s/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -11,29 +11,27 @@
   <div class="header">
     <h1 class="title">コンピューティング実習　問題9</h1>
     <p class="sanae1">
-      <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1rlL5KTUkRqVG-00jdht7VQLQvZBntz-OcEPLKDn89BU&mime_type=application/vnd.google-apps.spreadsheet&title=next.html"
-        target="exp">next.html</a> を作成してください。
-      <a href="https://forms.gle/XS2MQdkPSEQ4DhdBA" target="_blank" rel="noopener noreferrer">9-2のdocument id を送信</a>
+      左の画像のようなページを作るhtmlファイルを完成させてください．
+      <!-- <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1y4Zyt56MWsw6yjI8QzuzeU53AUMEiLauOmbY_zvPr04&mime_type=application/vnd.google-apps.spreadsheet&title=index.html"
+        target="exp">(1)index.html</a> を作成してください。 -->
+      <a href="https://forms.gle/AdZbcrKqZkvHZiKo8" target="_blank" rel="noopener noreferrer">9-2のdocument id を送信</a>
+      
     </p>
   </div>
 
   <div style="height:100px;"></div>
 
-  <div style="float: left; width: 20%;">
-    <img src="image9.jpg" alt="写真" width="20%">
-
+  <div style="float: left; width: 20%; ">
+    <img src="image14.jpg" alt="写真" width="20%">
   </div>
-  <div style="float: right; width: 79%; border: solid 1px black;">
+  <div style="float: right; width: 78%; border: solid 1px black;">
     <iframe
-      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1rlL5KTUkRqVG-00jdht7VQLQvZBntz-OcEPLKDn89BU&mime_type=application/vnd.google-apps.spreadsheet&title=next.html"
+      src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1CWdzkhfTKcBxFQkbk4tfQwGwEj0GMdvKfgKLLyJigu0&mime_type=application/vnd.google-apps.spreadsheet&title=9-2"
       name="exp" height="1000" width="100%" scrolling="yes">
     </iframe>
-
   </div>
   <div style="clear: both;"></div>
 
   <div id="footer">©Sanae　Fujii</div>
-
-  </footer>
 
 </body>
