10回小テスト

--- a/jigsaw/1017y/index.html
+++ b/jigsaw/1017y/index.html
@@ -26,13 +26,13 @@
 </p>
 
   <p class="double-bottom"></p>
-  <div style="float: left; width:30%; text-align: center; position: fixed; border: solid 6px black;">
-    <img src="image26.jpg" alt="写真" width="90%" >
+  <div style="float: left; width:40%; position: fixed; border: solid 3px black;">
+    <img src="image26.jpg" alt="写真" width="65%">
    
     
     
   </div>
-  <div style="float: right; width: 60%; border: solid 1px black;">
+  <div style="float: right; width: 76%; border: solid 1px black;">
     <iframe
       src="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1EpqY6L59IFO6ScfU7RB8kJUUEIL0axoFmKZJrlcayUs&mime_type=application/vnd.google-apps.spreadsheet&title=html%20css"
       name="exp" height="1000" width="100%" scrolling="yes">
