--- a/jigsaw/1124-2/index.html
+++ b/jigsaw/1124-2/index.html
@@ -9,9 +9,9 @@
 
 <body>
   <div class="header">
-    <h1 class="title">コンピューティング実習　問題9</h1>
+    <h1 class="title">コンピューティング実習　問題10-2</h1>
     <p class="sanae1">
-      左の画像のようなページを作るhtmlファイルを完成させてください．
+      左の画像のようなページを作るcssファイルを完成させてください．
       <!-- <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1y4Zyt56MWsw6yjI8QzuzeU53AUMEiLauOmbY_zvPr04&mime_type=application/vnd.google-apps.spreadsheet&title=index.html"
         target="exp">(1)index.html</a> を作成してください。 -->
       <a href="https://forms.gle/FSjcg2haMWLyfhedA" target="_blank" rel="noopener noreferrer">10-2のdocument id を送信</a>
@@ -22,8 +22,8 @@
 
   <div style="height:100px;"></div>
 
-  <div style="float: left; width: 20%; ">
-    <img src="image31.jpg" alt="写真" width="25%"height=70%>
+  <div style="float: left; width: 25%; ">
+    <img src="image442.jpg" alt="写真" width="20%"height=70%>
   </div>
   <div style="float: right; width: 78%; border: solid 1px black;">
     <iframe
