--- a/jigsaw/1124-3/index.html
+++ b/jigsaw/1124-3/index.html
@@ -14,7 +14,7 @@
       左上の画像のようなページを作るhtmlファイルを完成させてください．
       <!-- <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1y4Zyt56MWsw6yjI8QzuzeU53AUMEiLauOmbY_zvPr04&mime_type=application/vnd.google-apps.spreadsheet&title=index.html"
         target="exp">(1)index.html</a> を作成してください。 -->
-      <a href="https://forms.gle/FSjcg2haMWLyfhedA" target="_blank" rel="noopener noreferrer">10-3のdocument id を送信</a>
+      <a href="https://forms.gle/oUibFBXQAhDsPtLy9" target="_blank" rel="noopener noreferrer">10-3のdocument id を送信</a>
 
 
     </p>
