--- a/jigsaw/1125a/index.html
+++ b/jigsaw/1125a/index.html
@@ -14,7 +14,7 @@
       左の画像のようなページを作るcssファイルを完成させてください．
       <!-- <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1y4Zyt56MWsw6yjI8QzuzeU53AUMEiLauOmbY_zvPr04&mime_type=application/vnd.google-apps.spreadsheet&title=index.html"
         target="exp">(1)index.html</a> を作成してください。 -->
-      <a href="https://forms.gle/FSjcg2haMWLyfhedA" target="_blank" rel="noopener noreferrer">10-1のdocument id を送信</a>
+      <a href="https://forms.gle/KfzJhxztVgdUCbBQA" target="_blank" rel="noopener noreferrer">10-1のdocument id を送信</a>
       <a href="../1124-2/index.html" target="_blank" rel="noopener noreferrer">(2)はここをクリックしてください</a>
     </p>
     </p>
