project#1修正・「個人自由課題」フォルダ指定

--- a/project/project01.html
+++ b/project/project01.html
@@ -21,6 +21,7 @@
     <ul>
         <li>ウェブサイトはKenyaを使って作ること</li>
         <li>自分のKenyaに本課題専用フォルダ（プロジェクト）を作成し，その中に課題ファイルを作ること</li>
+        <li>上記フォルダの名前は「個人自由課題」とすること．</li>
         <li>ウェブサイトは３つ以上のページ（htmlファイル）と単一のスタイルシート(cssファイル）から構成すること</li>
         <li>ウェブサイトのトップページはindex.htmlファイルとし，トップページからリンクをたどることですべてのページに到達できるようにすること</li>
         <li>スタイルシートを一つ作り（２つ以上作ってはいけない），各ページ共通のスタイルになるように多少なりとも手を加えること</li>
