part3の初期バージョン完成

--- a/text-part3/src/1-3.html
+++ b/text-part3/src/1-3.html
@@ -4,6 +4,7 @@
     <script>
         function a() {
             window.alert('hello, world');
+            console.log('こんにちは！');
         }
     </script>
 </head>
