10回小テスト見直し

--- a/jigsaw/illumination2020のコピー/index.html
+++ b/jigsaw/illumination2020のコピー/index.html
@@ -20,15 +20,18 @@
 
 
   
-  <p class="double-bottom"></p>
+    <div id="double-bottom"></div>
 
 
 
 
   <div class="pbox">
-    <img src="image20.jpg"alt="オレンジ"id="image7"> 
-    <img src="17503_1.jpg"alt="オレンジ"id="image7"> 
+    
+
+    <img src="image20.jpg"  alt="オレンジ"> 
+    <img src="17503_1.jpg" alt="オレンジ"> 
   </div>
+
 
 
 
