１１回授業へ向けて修正

--- a/text-part3/exercises/12/index.html
+++ b/text-part3/exercises/12/index.html
@@ -63,6 +63,22 @@
         <li>表示する画像は，google画像検索などで探して，使用する</li>
     </ul>
 
+    <h2>課題11-8 数あてゲーム</h2>
+    次の動画で示すようなアプリケーションを作りなさい．
+    <h3>動作仕様（動画）</h3>
+    <video src="11-8.mov" width="400" height="300" autoplay loop muted></video>
+    <h3>仕様</h3>
+    <ul>
+        <li>ユーザはStartボタンを押すと，システムは１　から２０までの乱数を生成し，記憶する．</li>
+        <li>ユーザは生成された数を予想し，回答欄に入力して「回答」ボタンを押す</li>
+        <li>回答が正しければ「あたり！」と表示</li>
+        <li>回答が誤りであれば「はずれ！」のあとに，</li>
+        <ul>
+            <li>正解が入力値より大きい場合「それより大きいです」と表示する．</li>
+            <li>正解が入力値より小さい場合「それより小さいです」と表示する．</li>
+        </ul>
+    </ul>
+
     <h2>課題12-4　ピラミッド</h2>
     次の動画で示すようなプログラムを作りなさい．
     <h3>動作仕様（動画）</h3>
