--- a/text-part3/exercises/11/index.html
+++ b/text-part3/exercises/11/index.html
@@ -20,6 +20,7 @@
     <h3>仕様</h3>
     <ul>
         <li>勝数と負数を入力し，計算ボタンを押すと，勝率（％）を計算し出力する．</li>
+        <li>ファイル名を「winningrate.html」とすること</li>
     </ul>
 
     <h2>課題11-2　BMI計算アプリケーション</h2>
@@ -29,6 +30,7 @@
     <h3>仕様</h3>
     <ul>
         <li>身長と体重を入力し，計算ボタンを押すと，BMIを計算し出力する．</li>
+        <li>ファイル名を「bmi.html」とすること</li>
     </ul>
 
     <h2>課題11-3　乱数生成</h2>
@@ -38,6 +40,7 @@
     <h3>仕様</h3>
     <ul>
         <li>ユーザがAボタンを押すと，1から6までの乱数を１０個生成し，リストに出力する</li>
+        <li>ファイル名を「random10.html」とすること</li>
     </ul>
 
     <h2>課題11-4　階乗計算</h2>
@@ -47,6 +50,7 @@
     <h3>仕様</h3>
     <ul>
         <li>ユーザが求める回数を入力し，Aボタンを押すと，入力された回数までの階乗を計算し，１から順にリストに表示する</li>
+        <li>ファイル名を「factorial.html」とすること</li>
     </ul>
 
     <h2>課題11-5-1　fizz buzz(1)</h2>
@@ -56,6 +60,7 @@
     <h3>仕様</h3>
     <ul>
         <li>ユーザがAボタンを押すと，１から20までを数える表を生成する</li>
+        <li>ファイル名を「fizzbuzz.html」とすること</li>
     </ul>
 
     <h2>課題11-5-2　fizz buzz(2)</h2>
@@ -72,6 +77,7 @@
             <li>３と５の倍数ならfizz buzz</li>
         </ul>
         <li>と表示する．</li>
+        <li>ファイル名を「fizzbuzz.html」とすること(11-5-1を書き換えてしまって良い)</li>
     </ul>
 
     <h2>課題11-6 九九の計算表</h2>
@@ -82,6 +88,7 @@
     <ul>
         <li>ユーザがAボタンを押すと，システムは九九の計算表を表示する</li>
         <li>HTMLを直接入力するのではなく，JavascriptプログラムでHTMLを生成すること</li>
+        <li>ファイル名を「kuku.html」とすること</li>
     </ul>
 
     <h2>課題11-7 複利計算</h2>
@@ -95,25 +102,10 @@
         <li>複利とは，”元金（がんきん）によって生じた利子を次期の元金に組み入れる方式であり、
             元金だけでなく利子にも次期の利子がつく。”(wikipedia)のこと．
             計算方法の詳細が分からない場合はwikipedia「複利」を参考のこと</li>
+        <li>ファイル名を「mortgage.html」とすること</li>
     </ul>
 
-    <h2>課題11-8 数あてゲーム</h2>
-    次の動画で示すようなアプリケーションを作りなさい．
-    <h3>動作仕様（動画）</h3>
-    <video src="11-8.mov" width="400" height="300" autoplay loop muted></video>
-    <h3>仕様</h3>
-    <ul>
-        <li>ユーザはStartボタンを押すと，システムは１　から２０までの乱数を生成し，記憶する．</li>
-        <li>ユーザは生成された数を予想し，回答欄に入力して「回答」ボタンを押す</li>
-        <li>回答が正しければ「あたり！」と表示</li>
-        <li>回答が誤りであれば「はずれ！」のあとに，</li>
-        <ul>
-            <li>正解が入力値より大きい場合「それより大きいです」と表示する．</li>
-            <li>正解が入力値より小さい場合「それより小さいです」と表示する．</li>
-        </ul>
-    </ul>
-
-    <h2>課題11-9 乱数の分布調査</h2>
+    <h2>課題11-8 乱数の分布調査</h2>
     次の動画で示すようなアプリケーションを作りなさい．
     <h3>動作仕様（動画）</h3>
     <video src="11-9.mov" width="400" height="300" autoplay loop muted></video>
@@ -127,9 +119,10 @@
             <li>割合も表示してみてください</li>
             <li>理論的には，試行回数が多くなるほど，割合が1/6に収束するはずです</li>
         </ul>
+        <li>ファイル名を「randomaccuracy.html」とすること</li>
     </ul>
 
-    <h2>課題11-10 ２進数を１０進数に変換</h2>
+    <h2>課題11-9 ２進数を１０進数に変換</h2>
     次の動画で示すようなアプリケーションを作りなさい．
     <h3>動作仕様（動画）</h3>
     <video src="11-10.mov" width="400" height="300" autoplay loop muted></video>
@@ -137,6 +130,7 @@
     <ul>
         <li>ユーザはプルダウンメニューを使って２進数を入力し，変換ボタンを押す</li>
         <li>システムは入力された２進数を１０進数に変換し，出力する</li>
+        <li>ファイル名を「convertbinary.html」とすること</li>
     </ul>
 
 </body>
