--- a/jigsaw/1124-2/index.html
+++ b/jigsaw/1124-2/index.html
@@ -11,7 +11,7 @@
   <div class="header">
     <h1 class="title">コンピューティング実習　問題10-2</h1>
     <p class="sanae1">
-      左の画像のようなページを作るcssファイルを下のhtmlファイルを参考にして完成させてください．
+      table.htmlに適応することで図2の表示になるようなcssを構成してください．
       <!-- <a href="https://cc-study.appspot.com/jigsaw-code2/puzzle_sentence_2?txt=https://cc-study.appspot.com/jigsaw-code-2-puzzle/puzzle/1y4Zyt56MWsw6yjI8QzuzeU53AUMEiLauOmbY_zvPr04&mime_type=application/vnd.google-apps.spreadsheet&title=index.html"
         target="exp">(1)index.html</a> を作成してください。 -->
       <a href="https://forms.gle/cJCrZod99iq8psKD8" target="_blank" rel="noopener noreferrer">10-2のdocument id を送信</a>
@@ -23,7 +23,7 @@
   <div style="height:100px;"></div>
 
   <div style="float: left; width: 20%; ">
-    <img src="image331.jpg" alt="写真" width="22%"height=70%>
+    <img src="image32222.jpg" alt="写真" width="22%"height=70%>
   </div>
   <div style="float: right; width: 76%; border: solid 1px black;">
     <iframe
