第１２回，１３回の課題を整備

--- a/text-part3/exercises/12/index.html
+++ b/text-part3/exercises/12/index.html
@@ -27,6 +27,7 @@
             <li>正解が入力値より大きい場合「それより大きいです」と表示する．</li>
             <li>正解が入力値より小さい場合「それより小さいです」と表示する．</li>
         </ul>
+        <li><a href="src/q12-0_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <h2>課題12-1　canvasの練習</h2>
@@ -37,6 +38,7 @@
     <ul>
         <li>Aボタンを押すと、canvas内のどこか（乱数を使い，場所は毎回変わる）に直径10の円を表示する</li>
         <li>Bボタンを押すとクリア（すべての丸を消去）する</li>
+        <li><a href="src/q12-1_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <h2>課題12-2　旗の描画</h2>
@@ -49,6 +51,7 @@
         <li>旗の表示位置（矩形の左上隅の座標）は，テキストボックス（x座標，y座標をテキストフィールド）から取得する</li>
         <li>旗のサイズは，下図を参照</li>
         <li>黒い背景（canvasの背景）</li>
+        <li><a href="src/q12-2_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <img src="12-2hint.png">
@@ -77,6 +80,7 @@
         </ul>
         <li>それぞれcanvasに表示する</li>
         <li>表示する画像は，google画像検索などで探して，使用する</li>
+        <li><a href="src/q12-3_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <h2>課題12-4　ピラミッド</h2>
@@ -87,6 +91,7 @@
     <ul>
         <li>ユーザは段数を入力する</li>
         <li>システムは入力された段数のピラミッドを出力する</li>
+        <li><a href="src/q12-4_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <h2>課題12-5　追いかけっこ</h2>
@@ -101,6 +106,7 @@
         <li>4つの方向ボタンで，白丸を操作する</li>
         <li>同時に，敵も乱数を使い，1/4の確率で上下左右いずれかに移動する</li>
         <li>敵を捕まえたら，クリア</li>
+        <li><a href="src/q12-5_template.txt">テンプレート</a>を使って良い</li>
     </ul>
 
     <h3>追加仕様</h3>
