第３部　５章の修正

--- a/text-part3/index.html
+++ b/text-part3/index.html
@@ -822,7 +822,7 @@ document.getElementById(&#39;fruits&#39;).appendChild(li);</code></pre>
 <h1 data-number="5" id="ローカル変数とグローバル変数"><span class="header-section-number">5</span> ローカル変数とグローバル変数</h1>
 <p>本章では，ローカル変数とグローバル変数について学びます．</p>
 <h2 data-number="5.1" id="ローカル変数"><span class="header-section-number">5.1</span> ローカル変数</h2>
-<p>関数(function)内に定義された変数(var)が関数内でのみ有効であることは，第１部の教材「変数のスコープ」で学習しました．関数の中に定義した変数は関数ブロック内で有効です．関数を超えて</p>
+<p>関数(function)内に定義された変数(var)が関数内でのみ有効であることは，第１部の教材「変数のスコープ」で学習しました．関数の中に定義した変数は関数ブロック内で有効なので，関数ブロックの外で変数を参照することはできません．</p>
 <p>ここでは，次のようなプログラムで，ボタンが何度も押され，関数がその都度呼ばれる場面を考えてみましょう．</p>
 <div class="mytable">
 <p class="mytdhl">source <span class="CopyButton" onclick="copycode('lst:5-1')">c</span></p>
