第３部　画像の位置を修正

--- a/text-part3/src/9-3.html
+++ b/text-part3/src/9-3.html
@@ -4,11 +4,11 @@
     <script>
 
         var img01 = new Image();
-        img01.src = 'img/goo.png';
+        img01.src = 'goo.png';
         var img02 = new Image();
-        img02.src = 'img/choki.png';
+        img02.src = 'choki.png';
         var img03 = new Image();
-        img03.src = 'img/pa.png';
+        img03.src = 'pa.png';
 
         var timer;
         var state = '停止中';
