--- a/text-part3/src/6-5.html
+++ b/text-part3/src/6-5.html
@@ -3,7 +3,7 @@
 <head>
     <script>
         var img01 = new Image();
-        img01.src = 'img/goo.png';
+        img01.src = 'goo.png';
 
         function buttonAPressed() {
             var ctx = document.getElementById('canvas1').getContext('2d');
