part3 課題を修正

--- a/text-part3/exercises/12/index.html
+++ b/text-part3/exercises/12/index.html
@@ -28,6 +28,7 @@
             <li>正解が入力値より小さい場合「それより小さいです」と表示する．</li>
         </ul>
         <li><a href="src/q12-0_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「numberguess.html」とすること</li>
     </ul>
 
     <h2>課題12-1　canvasの練習</h2>
@@ -39,6 +40,7 @@
         <li>Aボタンを押すと、canvas内のどこか（乱数を使い，場所は毎回変わる）に直径10の円を表示する</li>
         <li>Bボタンを押すとクリア（すべての丸を消去）する</li>
         <li><a href="src/q12-1_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「canvas.html」とすること</li>
     </ul>
 
     <h2>課題12-2　旗の描画</h2>
@@ -52,6 +54,7 @@
         <li>旗のサイズは，下図を参照</li>
         <li>黒い背景（canvasの背景）</li>
         <li><a href="src/q12-2_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「flags.html」とすること</li>
     </ul>
 
     <img src="12-2hint.png">
@@ -81,6 +84,7 @@
         <li>それぞれcanvasに表示する</li>
         <li>表示する画像は，google画像検索などで探して，使用する</li>
         <li><a href="src/q12-3_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「fruitdic.html」とすること</li>
     </ul>
 
     <h2>課題12-4　ピラミッド</h2>
@@ -92,6 +96,7 @@
         <li>ユーザは段数を入力する</li>
         <li>システムは入力された段数のピラミッドを出力する</li>
         <li><a href="src/q12-4_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「pyramid.html」とすること</li>
     </ul>
 
     <h2>課題12-5　追いかけっこ</h2>
@@ -107,6 +112,7 @@
         <li>同時に，敵も乱数を使い，1/4の確率で上下左右いずれかに移動する</li>
         <li>敵を捕まえたら，クリア</li>
         <li><a href="src/q12-5_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「catchup2.html」とすること</li>
     </ul>
 
     <h3>追加仕様</h3>
