--- a/text-part3/exercises/13/index.html
+++ b/text-part3/exercises/13/index.html
@@ -25,6 +25,7 @@
         <li>星が枠右に到達すると，枠左に星が移動し，アニメーションを続ける</li>
         <li><a href="src/q13-1_template.txt">テンプレート</a>を使って良い</li>
         <li>星の画像は<a href="src/star.png">これ</a>を使って良い</li>
+        <li>ファイル名を「shootingstar.html」とすること</li>
     </ul>
 
     <h2>課題13-2　キッチンタイマー（１）５秒計</h2>
@@ -36,6 +37,7 @@
         <li>Startボタンを押すと，ボタンの左隣にある数字（spanタグでプログラムから特定できる）が１秒毎にカウントダウンする．</li>
         <li>カウントが０になると，カウントを止め，キャンパスに「時間です！」と表示する．（テキストでも，任意の画像でも良い．）</li>
         <li><a href="src/q13-2_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「kitchentimer.html」とすること</li>
     </ul>
 
     <h2>課題13-3　キッチンタイマー（２）時間設定機能付き</h2>
@@ -48,8 +50,10 @@
         <li>「min+」ボタンを押すと残時間計の「分」に１を足す．</li>
         <li>「min-」ボタンを押すと残時間計の「分」から１を引く．（マイナスにならないようにする工夫も期待します）</li>
         <li>「Start」ボタンを押すと，残時間計が１秒毎にカウントダウンする．（「秒の位」が０になったら，「分の位」に残りがあれば１を引き，「秒の位」を５９とする）</li>
+        <li>「Stop」ボタンを押すと，残時間計のカウントダウンを止める．</li>
         <li>残時間計が０になると，カウントを止め，キャンパスに「時間です！」と表示する．（テキストでも，任意の画像でも良い．）</li>
         <li><a href="src/q13-3_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「kitchentimer2.html」とすること</li>
     </ul>
 
     <h2>課題13-4　追いかけっこ（２）</h2>
@@ -67,6 +71,7 @@
         <li>敵を捕まえたら，クリアである．</li>
         <li>クリアしたときの処理は，しなくても構わないが，プログラム敵を止める，クリア画像を表示する，などの工夫は歓迎する．</li>
         <li><a href="src/q13-A_template.txt">テンプレート</a>を使って良い</li>
+        <li>ファイル名を「catchup2.html」とすること</li>
     </ul>
 </body>
 
