プロジェクト＃２の説明　第１版

--- a/project/project02.html
+++ b/project/project02.html
@@ -5,9 +5,9 @@
 </head>
 
 <body>
-    <h2>コンピュータ実習2019 ミニプロジェクト</h2>
+    <h2>コンピュータ実習2020 プロジェクト#2</h2>
     <h3>課題概要</h3>
-    <p>１〜３名のグループで，コンピュータ実習で学習した内容を応用した自由作品制作プロジェクトを行う．</p>
+    <p>１〜３名のグループで，コンピューティング実習で学習した内容を応用した自由作品制作プロジェクトを行う．</p>
     <h3>課題の要件</h3>
     <ul>
         <li>HTML, Javascriptの両技術を組み合わせて利用した学内Webに公開できるオリジナル作品であること．</li>
@@ -17,31 +17,34 @@
     <ol>
         <li>動作するWebサイト（グループごと）</li>
         <ul>
-            <li>学内公開フォルダにアップロードし，学内コンピュータから閲覧できるようにする</li>
-            <li>作品制作(1)で公開した方法と同様，Yドライブにて公開するが，作品制作(1)は消さないようにする</li>
-            <li>上記の目的のため，Yドライブにprojectフォルダを作り，その中に作品を入れる</li>
-            <li>作品のURLがhttp://sc17vlweb01.cc.ag.aoyama.ac.jp/user/[グループのいずれか１名ののログイン名]/project/index.htmlになるようにする</li>
+            <li>ウェブサイトは最終的にKenyaを使って公開すること</li>
+            <li>グループメンバーの誰かのKenyaに本課題専用フォルダ（プロジェクト）を作成し，その中に課題ファイルを作ること</li>
+            <li>上記フォルダの名前は「自由課題２」とすること．</li>
         </ul>
-        <li>1/24(金) 1限での１分間プレゼンテーション（グループごと）</li>
-        <li>個人レポート（個人での担当箇所とその所感を記述したもの，A4ー半ページ以上）（個人ごと）</li>
+        <li>プレゼンテーション動画（５分以内）の作成（グループごと）</li>
+        <li>個人レポート（個人の担当箇所とその所感を記述したもの，A4ー半ページ以上）（個人ごと）</li>
         <ul>
-            <li>コースパワーにて提出</li>
+            <li>google classroomの提出場所に提出</li>
         </ul>
     </ol>
     <h3>提出期限</h3>
     <ul>
-        <li>1/24(金) 9:00</li>
+        <li>1/29(金) 12:00</li>
     </ul>
     <h3>スケジュール</h3>
     <ul>
-        <li>1/10(金)：１限・２限　企画・製作</li>
-        <li>1/24(金)：１限　プレゼンテーション</li>
+        <li>1/ 8(金)：２限　企画・製作</li>
+        <li>1/15(金)：１限・２限　制作</li>
+        <li>1/29(金)：作品提出締切</li>
     </ul>
     <h3>開発環境</h3>
     <ul>
-        <li>開発環境はVisual Studio Codeを利用してください．</li>
-        <li>正式版ではないが，Webバージョンのでpublic previewを使ってもよい．<a
-                href="https://visualstudio.microsoft.com/ja/services/visual-studio-online/">こちら</a></li>
+        <li>開発環境（プログラムの編集）は何を使ってもよいが，最終的にはKenyaを利用し提出してください．</li>
+        <li>Kenyaにはグループ作業の機能はないので，
+            グループで作業する場合にはそれぞれのKenyaでファイルを共有したりして制作をすすめ，
+            最終的には一人のKenyaに統合して提出してください．（コードトリップ履歴は評価に全く影響しませんので気にせず結構です）
+        </li>
+        <li>共同で編集できる環境として，VSCode Live Shareという環境を試してみるのも良い．</li>
     </ul>
     <h3>採点基準</h3>
     <ul>
@@ -49,7 +52,7 @@
         <ul>
             <li>面白い企画であること（社会情報学部らしい作品を期待する）</li>
             <li>アプリケーションのデザインが優れていること（機能性・スタイルシート等）</li>
-            <li>良いプレゼンテーションであること（Webの見せ方・プレゼン内容）</li>
+            <li>良いプレゼンテーションであること（Webの見せ方・プレゼンの語り内容）</li>
         </ul>
         <li>技術点（50%）</li>
         <ul>
