project2の期限を修正

--- a/project/project02.html
+++ b/project/project02.html
@@ -29,13 +29,13 @@
     </ol>
     <h3>提出期限</h3>
     <ul>
-        <li>1/29(金) 12:00</li>
+        <li>1/24(日) 23:59</li>
     </ul>
     <h3>スケジュール</h3>
     <ul>
         <li>1/ 8(金)：２限　企画・製作</li>
         <li>1/15(金)：１限・２限　制作</li>
-        <li>1/29(金)：作品提出締切</li>
+        <li>1/24(日)：作品提出締切</li>
     </ul>
     <h3>開発環境</h3>
     <ul>
