追いかけっこのファイル名を変更

--- a/text-part3/exercises/12/index.html
+++ b/text-part3/exercises/12/index.html
@@ -112,7 +112,7 @@
         <li>同時に，敵も乱数を使い，1/4の確率で上下左右いずれかに移動する</li>
         <li>敵を捕まえたら，クリア</li>
         <li><a href="src/q12-5_template.txt">テンプレート</a>を使って良い</li>
-        <li>ファイル名を「catchup2.html」とすること</li>
+        <li>ファイル名を「catchup.html」とすること</li>
     </ul>
 
     <h3>追加仕様</h3>
