プロジェクト2に関する記述の更新

--- a/project/project02.html
+++ b/project/project02.html
@@ -20,13 +20,29 @@
             <li>ウェブサイトは最終的にKenyaを使って公開すること</li>
             <li>グループメンバーの誰かのKenyaに本課題専用フォルダ（プロジェクト）を作成し，その中に課題ファイルを作ること</li>
             <li>上記フォルダの名前は「自由課題２」とすること．</li>
+            <li>トップページ(index.html)を「open」で開いたときにアドレスバーに出てくるURLを提出すること．</li>
         </ul>
-        <li>プレゼンテーション動画（５分以内）の作成（グループごと）</li>
-        <li>個人レポート（個人の担当箇所とその所感を記述したもの，A4ー半ページ以上）（個人ごと）</li>
+        <li>作品プレゼンテーション動画（グループごと）</li>
         <ul>
-            <li>google classroomの提出場所に提出</li>
+            <li>５分以内で，グループメンバー全員の顔と声が一部でも出演するようにすること．</li>
+            <li>画面による作品デモを含むこと．</li>
+            <li>動画記録試験の要領でWebexで画面とともに撮影し，URLを示す方法でよい．</li>
+            <li>Webex以外の方法で撮影した場合には，YoutubeにアップしてURLを示してください．</li>
+        </ul>
+        <li>個人レポート（個人ごと）</li>
+        <ul>
+            <li>プロジェクトにおける個人の担当箇所とその所感を記述したもの</li>
+            <li>WordまたはGoogleDoc</li>
+            <li>分量A4ー半ページ以上</li>
+            <li>自分の担当箇所について，プロジェクトメンバー以外の人に手伝ってもらった場合にはその内容をここに記述しておくこと</li>
         </ul>
     </ol>
+    <h3>提出方法</h3>
+    <ul>
+        <li>グループ成果物をグループの代表者１名が，google classroomのグループ成果提出場所に提出</li>
+        <li>個人成果物を全員が，google classroomの個人成果提出場所に提出</li>
+    </ul>
+
     <h3>提出期限</h3>
     <ul>
         <li>1/24(日) 23:59</li>
