プロジェクト#2要綱の更新

--- a/project/project02.html
+++ b/project/project02.html
@@ -35,6 +35,7 @@
             <li>WordまたはGoogleDoc</li>
             <li>分量A4ー半ページ以上</li>
             <li>自分の担当箇所について，プロジェクトメンバー以外の人に手伝ってもらった場合にはその内容をここに記述しておくこと</li>
+            <li>この授業全体への感想もぜひお寄せください．遠隔授業における演習環境発展や授業改善への資料にさせていただきます．</li>
         </ul>
     </ol>
     <h3>提出方法</h3>
